--- a/src/main/java/com/jabaraster/glass/web/ui/page/Common.less
+++ b/src/main/java/com/jabaraster/glass/web/ui/page/Common.less
@@ -18,36 +18,18 @@
 @border-radius-small: 4px;
 @border-radius-normal: 6px;
 
-.inputs(@label-width: 150px) {
-    > ul > li, > ul > * > li { /* wicket:removeでレイアウト調整することを考慮し、「ul.inputs > * > li」を書いておく.  */
-      margin-right: 1em;
-      margin-top: 0.3em;
-      margin-bottom: 1em;
-      padding-bottom: 5px;
-      border-bottom: solid 1px rgba(0,0,0,.2);
-      box-shadow: rgba(0,0,0,.3) 0px 1px;
-
-      > * {
-        vertical-align: top;
-      }
-      > span:nth-child(1) {
-        font-size: large;
-        text-align: right;
-        width: @label-width;
-        display: inline-block;
-        line-height: inherit;
-      }
-      > span:nth-child(1):after {
-        content: '：';
-      }
-      > div {
-        display: inline-block;
-        > ul.feedbackPanel {
-          list-style: none;
-          margin-left: 0.1em;
-        }
-      }
-    }
+.inputs(@width: 120px) {
+	li {
+	    label {
+	       display: inline-block;
+	       text-align: right;
+	       width: @width;
+	       padding-right: 10px;
+	    }
+	    label:after {
+	       content: ':';
+	    }
+	}
 }
 
 .gradient(@gradient-top: rgb(200, 255, 200), @gradient-bottom: rgb(180,220,180), @gradient-top-hex: #c8ffc8, @gradient-bottom-hex: #b4dcb4) {
